--- a/src/templates/results.html
+++ b/src/templates/results.html
@@ -1,41 +1,31 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Earthquake Results</title>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/styles.css') }}">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-</head>
-<body>
-    <div class="container">
-        <h1 class="text-center my-4">Earthquake Results</h1>
-        <table class="table table-striped">
-            <thead>
-                <tr>
-                    <th>Time</th>
-                    <th>Latitude</th>
-                    <th>Longitude</th>
-                    <th>Depth</th>
-                    <th>Magnitude</th>
-                    <th>Place</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for earthquake in earthquakes %}
-                <tr>
-                    <td>{{ earthquake.time }}</td>
-                    <td>{{ earthquake.latitude }}</td>
-                    <td>{{ earthquake.longitude }}</td>
-                    <td>{{ earthquake.depth }}</td>
-                    <td>{{ earthquake.mag }}</td>
-                    <td>{{ earthquake.place }}</td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-    </div>
-    <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block content %}
+<div class="container">
+    <h1 class="text-center my-4">Earthquake Results</h1>
+    <table class="table table-striped">
+        <thead>
+            <tr>
+                <th>Time</th>
+                <th>Latitude</th>
+                <th>Longitude</th>
+                <th>Depth</th>
+                <th>Magnitude</th>
+                <th>Place</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for earthquake in earthquakes %}
+            <tr>
+                <td>{{ earthquake.time }}</td>
+                <td>{{ earthquake.latitude }}</td>
+                <td>{{ earthquake.longitude }}</td>
+                <td>{{ earthquake.depth }}</td>
+                <td>{{ earthquake.mag }}</td>
+                <td>{{ earthquake.place }}</td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+</div>
+{% endblock %}
