--- a/src/templates/query.html
+++ b/src/templates/query.html
@@ -32,6 +32,10 @@
             <label for="place">Place:</label>
             <input type="text" class="form-control" id="place" name="place">
         </div>
+        <div class="form-group form-check">
+            <input type="checkbox" class="form-check-input" id="night_time" name="night_time">
+            <label class="form-check-label" for="night_time">Check if large earthquakes (mag > 4.0) occur more often at night</label>
+        </div>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
 </div>
